Gets rid of random stuff

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <p>site refactor in progress...</p>
+  <p>For information, please email jameson.price@my.uwrf.edu</p>
   </body>
 </html>
