Adds basic information

--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
   <head>
   </head>
   <body>
-    <p>site refactor in progress...</p>
-  <p>For information, please email jameson.price@my.uwrf.edu</p>
+    <h1>site refactor in progress...</h1>
+    <br>
+    <h2>Spring 2026 Semester Info:</h2>
+    <br>
+    <h3>UWRF ACM</h3>
+    <p>Meets Mondays at 4:30 PM - 6:30 PM in South Hall 21</p>
+    <p>We do various activities, such as programming, networking, and much more!</p>
+    <p>No programming/etc. experience is needed! Come and have fun and learn!</p>
+    <br>
+    <h3>UWRF Development Team</h3>
+    <p>Meets Tuesdays at 4:30 PM - 6:30 PM in South Hall 21</p>
+    <p>Work on group development projects. Learn how to use Git and how to work in a team environment!</p>
+    <p>Semester project selection is on Tuesday, February 3!</p>
+    <p>Notice this website is a little simple? Join Dev Team to help fix it!</p>
+    <h2>Contact</h2>
+    <ul>
+        <li><strong>jameson.price@my.uwrf.edu</strong></li>
+        <li>paige.e.johnson@my.uwrf.edu</li>
+        <li>timothy.furlong@my.uwrf.edu</li>
+    </ul>
   </body>
 </html>
