--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+      <title>UWRF ACM</title>
   </head>
   <body>
     <h1>site refactor in progress...</h1>
@@ -17,6 +18,8 @@
     <p>Work on group development projects. Learn how to use Git and how to work in a team environment!</p>
     <p>Semester project selection is on Tuesday, February 3!</p>
     <p>Notice this website is a little simple? Join Dev Team to help fix it!</p>
+    <h2>Discord</h2>
+    <a href="https://discord.com/invite/92Vrnsn">https://discord.com/invite/92Vrnsn</a>
     <h2>Contact</h2>
     <ul>
         <li><strong>jameson.price@my.uwrf.edu</strong></li>
