Added a link to the GitHub page.

--- a/devTeam.html
+++ b/devTeam.html
@@ -5,9 +5,13 @@
   </head>
   <body>
     <h2>Spring 2026 Semester Info:</h2>
-    <p>Meets Tuesdays from 4:30PM - 6:30PM in South Hall 21</p>
+    <p>Meets Tuesdays from 4:30PM - 6:30PM in South Hall 21.</p>
     <p>Work on group development projects using Git.</p>
     <p>Current projects are this website and a Mexican Train game app.</p>
     <p>No experience required!</p>
+    <p>
+      Visit our GitHub page:
+      <a href="https://github.com/UWRF-Development-Team">https://github.com/UWRF-Development-Team</a>.
+    </p>
   </body>
 </html>
