embeds the top bar

--- a/door.html
+++ b/door.html
@@ -9,6 +9,7 @@
     <title>UWRF ACM!</title>
 </head>
 <body>
+<iframe src="topBar.html"></iframe>
 <h2>site refactor in progress...</h2>
 <br>
 <h1>Join UWRF ACM!</h1>
