added iframe to index.html, moved iframe css to general style.css file

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
       <title>UWRF ACM</title>
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <iframe src="topBar.html"></iframe>
     <h1>site refactor in progress...</h1>
     <br>
     <h2>Spring 2026 Semester Info:</h2>
