--- a/door.html
+++ b/door.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description">
     <meta name="viewport">
-    <link rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="door.css">
     <title>UWRF ACM!</title>
 </head>
