--- a/devTeam.html
+++ b/devTeam.html
@@ -4,6 +4,7 @@
       <title>UWRF ACM Dev Team</title>
   </head>
   <body>
+    <iframe src="topBar.html"></iframe>
     <h2>Spring 2026 Semester Info:</h2>
     <p>Meets Tuesdays from 4:30PM - 6:30PM in South Hall 21.</p>
     <p>Work on group development projects using Git.</p>
