adds the stylesheet for the topbar iframe

--- a/devTeam.html
+++ b/devTeam.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
       <title>UWRF ACM Dev Team</title>
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <iframe src="topBar.html"></iframe>
