Updated tags for index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>UWRF ACM</title>
-      <link rel="stylesheet" href="style.css">
+    <title>UWRF ACM</title>
+    <meta charset="UTF-8">
+    <meta name="description">
+    <meta name="viewport">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <iframe src="topBar.html"></iframe>
