added description, viewport, and src to topBar.js

--- a/topBar.html
+++ b/topBar.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <title>ACM Top Bar</title>
-    <link rel="stylesheet" href="topBar.css">
+    <meta charset="UTF-8">
+    <meta name="description" content="nav bar for website"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="topBar.css"/>
+    <script src="topBar.js"></script>
 </head>
 <body>
     <header>
