--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>UWRF ACM</title>
     <meta charset="UTF-8">
-    <meta name="description">
-    <meta name="viewport">
+    <meta name="description" content="ACM meeting information for use on the door.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
