--- a/devTeam.html
+++ b/devTeam.html
@@ -3,6 +3,10 @@
   <head>
       <title>UWRF ACM Dev Team</title>
       <link rel="stylesheet" href="style.css">
+      <meta charset="UTF-8">
+      <meta name="description" content="Information about the Dev Team">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script></script>
   </head>
   <body>
     <iframe src="topBar.html"></iframe>
