Expands on meta tags in door.html for issue #8.

--- a/door.html
+++ b/door.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description">
-    <meta name="viewport">
+    <meta name="description" content="ACM information for display on the door">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="door.css">
-    <title>UWRF ACM!</title>
+    <title>UWRF ACM Door!</title>
 </head>
 <body>
 <iframe src="topBar.html"></iframe>
