--- a/topBar.html
+++ b/topBar.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="index.html" target="_top">
             <p>Home</p>
         </a>
-        <a href="devTeam.html">
+        <a href="devTeam.html" target="_top">
             <p>Dev Team</p>
         </a>
-        <a href="door.html">
+        <a href="door.html" target="_top">
             <p>Door</p> <!--I want this to be an image of a door at some point -->
         </a>
     </header>
