--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <p>Notice this website is a little simple? Join Dev Team to help fix it!</p>
     <h2>Discord</h2>
     <a href="https://discord.com/invite/92Vrnsn">https://discord.com/invite/92Vrnsn</a>
+    <a href="https://github.com/UWRF-Development-Team">https://github.com/UWRF-Development-Team</a>
     <h2>Contact</h2>
     <ul>
         <li><strong>jameson.price@my.uwrf.edu</strong></li>
