Adds a door icon

--- a/topBar.html
+++ b/topBar.html
@@ -17,7 +17,7 @@
             <p>Dev Team</p>
         </a>
         <a href="door.html" target="_top">
-            <p>Door</p> <!--I want this to be an image of a door at some point -->
+            <img src="door-icon.svg" alt="An icon of an open door.">
         </a>
     </header>
 </body>
