Adds a help button. Changes styling to make individual buttons smaller.

--- a/topBar.html
+++ b/topBar.html
@@ -13,6 +13,10 @@
         <a href="index.html" target="_top">
             <p>Home</p>
         </a>
+        <!--todo-->
+        <a href="TODO.html" target="_top">
+            <p>Help</p>
+        </a>
         <a href="devTeam.html" target="_top">
             <p>Dev Team</p>
         </a>
