Adds a global sans-serif font

--- a/topBar.html
+++ b/topBar.html
@@ -6,6 +6,7 @@
     <meta name="description" content="nav bar for website"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="topBar.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <script src="topBar.js"></script>
 </head>
 <body>
