Adds a div to position most page content under the navigation bar. Resolves #18.

--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
   </head>
   <body>
     <iframe src="topBar.html"></iframe>
-    <h1>site refactor in progress...</h1>
-    <br>
-    <h2>Spring 2026 Semester Info:</h2>
-    <br>
-    <h3>UWRF ACM</h3>
-    <p>Meets Mondays at 4:30 PM - 6:30 PM in South Hall 21</p>
-    <p>We do various activities, such as programming, networking, and much more!</p>
-    <p>No programming/etc. experience is needed! Come and have fun and learn!</p>
-    <br>
-    <h3>UWRF Development Team</h3>
-    <p>Meets Tuesdays at 4:30 PM - 6:30 PM in South Hall 21</p>
-    <p>Work on group development projects. Learn how to use Git and how to work in a team environment!</p>
-    <p>Semester project selection is on Tuesday, February 3!</p>
-    <p>Notice this website is a little simple? Join Dev Team to help fix it!</p>
-    <h2>Discord</h2>
-    <a href="https://discord.com/invite/92Vrnsn">https://discord.com/invite/92Vrnsn</a>
-    <h2>Github</h2>
-    <a href="https://github.com/UWRF-Development-Team/ACM-Website">https://github.com/UWRF-Development-Team/ACM-Website</a>
-    <h2>Contact</h2>
-    <ul>
-        <li><strong>jameson.price@my.uwrf.edu</strong></li>
-        <li>paige.e.johnson@my.uwrf.edu</li>
-        <li>timothy.furlong@my.uwrf.edu</li>
-    </ul>
+    <div id="content">
+        <h1>site refactor in progress...</h1>
+        <br>
+        <h2>Spring 2026 Semester Info:</h2>
+        <br>
+        <h3>UWRF ACM</h3>
+        <p>Meets Mondays at 4:30 PM - 6:30 PM in South Hall 21</p>
+        <p>We do various activities, such as programming, networking, and much more!</p>
+        <p>No programming/etc. experience is needed! Come and have fun and learn!</p>
+        <br>
+        <h3>UWRF Development Team</h3>
+        <p>Meets Tuesdays at 4:30 PM - 6:30 PM in South Hall 21</p>
+        <p>Work on group development projects. Learn how to use Git and how to work in a team environment!</p>
+        <p>Semester project selection is on Tuesday, February 3!</p>
+        <p>Notice this website is a little simple? Join Dev Team to help fix it!</p>
+        <h2>Discord</h2>
+        <a href="https://discord.com/invite/92Vrnsn">https://discord.com/invite/92Vrnsn</a>
+        <h2>Github</h2>
+        <a href="https://github.com/UWRF-Development-Team/ACM-Website">https://github.com/UWRF-Development-Team/ACM-Website</a>
+        <h2>Contact</h2>
+        <ul>
+            <li><strong>jameson.price@my.uwrf.edu</strong></li>
+            <li>paige.e.johnson@my.uwrf.edu</li>
+            <li>timothy.furlong@my.uwrf.edu</li>
+        </ul>
+    </div>
   </body>
 </html>
