Adds files into directories

--- a/dev/devTeam.html
+++ b/dev/devTeam.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
       <title>UWRF ACM Dev Team</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="../style.css">
       <meta charset="UTF-8">
       <meta name="description" content="Information about the Dev Team">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script></script>
   </head>
   <body>
-    <iframe src="topBar.html"></iframe>
+    <iframe src="../header/topBar.html"></iframe>
     <div id="content">
         <h2>Spring 2026 Semester Info:</h2>
         <p>Meets Tuesdays from 4:30PM - 6:30PM in South Hall 21.</p>
