--- a/door/door.html
+++ b/door/door.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="description" content="ACM information for display on the door">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="door.css">
     <title>UWRF ACM Door!</title>
 </head>
 <body>
-<iframe src="topBar.html"></iframe>
+<iframe src="../header/topBar.html"></iframe>
 <div id="content">
     <h2>site refactor in progress...</h2>
     <br>
