--- a/header/topBar.html
+++ b/header/topBar.html
@@ -6,23 +6,23 @@
     <meta name="description" content="nav bar for website"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="topBar.css"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="../style.css"/>
     <script src="topBar.js"></script>
 </head>
 <body>
     <header>
-        <a href="index.html" target="_top">
+        <a href="../home/index.html" target="_top">
             <p>Home</p>
         </a>
         <!--todo-->
         <a href="TODO.html" target="_top">
             <p>Help</p>
         </a>
-        <a href="devTeam.html" target="_top">
+        <a href="../dev/devTeam.html" target="_top">
             <p>Dev Team</p>
         </a>
-        <a href="door.html" target="_top">
-            <img src="door-icon.svg" alt="An icon of an open door.">
+        <a href="../door/door.html" target="_top">
+            <img src="../door/door-icon.svg" alt="An icon of an open door.">
         </a>
     </header>
 </body>
