--- a/home/index.html
+++ b/home/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="description" content="ACM main page containing meeting and other information.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <iframe src="topBar.html"></iframe>
+    <iframe src="../header/topBar.html"></iframe>
     <div id="content">
         <h1>site refactor in progress...</h1>
         <br>
