Adds basic help information

--- a/help/help.html
+++ b/help/help.html
@@ -10,7 +10,28 @@
 <body>
     <iframe src="../header/topBar.html"></iframe>
     <div id="content">
-
+        <h1>Need help? We've got you!</h1>
+        <p>
+            Campus life is hard... And sometimes, so is getting help.<br>
+            We at UWRF ACM are willing to help with any CIDS related issues!
+        </p>
+        <h3>How do I get help?</h3>
+        <ul>
+            <li>
+                Walk in! If the ACM door (South Hall 21) is open, feel free to come in and ask any questions about your courses.<br>
+                While we aren't accredited by the university, we will help the best we can and point you in a better direction if not.
+            </li>
+            <li>
+                Access tutoring services! UWRF has tutoring services available, and most people find them very helpful.<br>
+                You can schedule an appointment <a href="https://students.uwrf.edu/studentsuccess/tutoring-services">here!</a>
+                If you'd like a walkthrough on how to make an appointment, click <a href="walkthroughTutorial.html">here.</a>
+            </li>
+            <li>
+                We understand that sometimes you need help in a different way. We're just students, and we can't help in every way.<br>
+                If needed, please access the counseling services <a href="https://students.uwrf.edu/student-health-counseling/counseling-services">here.</a><br>
+                UWRF has many other services it offers that may also help. A full list can be viewed <a href="https://www.uwrf.edu/student-life/support-and-services">here.</a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
