Adds the help page to the top bar

--- a/header/topBar.html
+++ b/header/topBar.html
@@ -14,8 +14,7 @@
         <a href="../home/index.html" target="_top">
             <p>Home</p>
         </a>
-        <!--todo-->
-        <a href="TODO.html" target="_top">
+        <a href="../help/help.html" target="_top">
             <p>Help</p>
         </a>
         <a href="../dev/devTeam.html" target="_top">
