Adds a walkthrough skeleton, obviously needs styling.

--- a/help/walkthroughTutorial.html
+++ b/help/walkthroughTutorial.html
@@ -10,7 +10,45 @@
 <body>
     <iframe src="../header/topBar.html"></iframe>
     <div id="content">
-
+        <h1>Accessing UWRF Tutoring Services</h1>
+        <ol>
+            <li>
+                Visit <a href="https://students.uwrf.edu/studentsuccess/tutoring-services">https://students.uwrf.edu/studentsuccess/tutoring-services</a>
+            </li>
+            <li>
+                Click the “Schedule an Appointment” button
+                <img src="assets/schedule.png" alt="A cursor clicking on a 'schedule appointment' button.">
+            </li>
+            <li>
+                Locate the widget to make an appointment
+                <ol type="a">
+                    <li>
+                        Find yourself in the “For Student” dropdown, pick the appropriate class, and pick a reason
+                    </li>
+                </ol>
+                <img src="assets/schedule_appt1.png" alt="A view of an unfilled scheduling form.">
+                <img src="assets/schedule_appt2.png" alt="A view of a filled scheduling form.">
+            </li>
+            <li>
+                Click the search button, and click on any available appointments<br>
+                If you’d like a different time, click the “Load more for…” button
+                <ol type="a">
+                    <li>
+                        If there are no available appointments, please click the “Report Unable to Find Appointment” button
+                    </li>
+                </ol>
+                <img src="assets/view_appts.png" alt="A selection of available appointments.">
+            </li>
+            <li>
+                Scroll down, and click the “Save” button to finalize your appointment
+                <ol type="a">
+                    <li>
+                        Please leave additional notes for the tutor if you can, like what you are currently working on, and anything else that may be out of the ordinary
+                    </li>
+                </ol>
+                <img src="assets/additional_info.png" alt="A textbox that asks for additional information for the tutor">
+            </li>
+        </ol>
     </div>
 </body>
 </html>
